Fix z-index of original filters when present (#2996)

--- a/app/assets/src/components/views/compare/SamplesHeatmapView/samples_heatmap_view.scss
+++ b/app/assets/src/components/views/compare/SamplesHeatmapView/samples_heatmap_view.scss
@@ -155,3 +155,8 @@
 .iconAlert {
   width: $icon-l;
 }
+
+.originalFilters {
+  position: relative;
+  z-index: 0;
+}
